--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
     <title>Lemoneyd</title>
 </head>
 <body>
+
+    <header>
+        <nav>
+            <h1><a href="#home">Lemoneyd</a></h1>
+            <ul>
+                <li><a href="#savings">Savings</a></li>
+                <li><a href="#credit-cards">Credit Cards</a></li>
+            </ul>
+        </nav>        
+    </header>
+
+    <main>
+
+
+    </main>
+
+    <footer>
+        <div id="footer-content">
+            <p>For the Filipino Finance Community 💛</p>
+            <p>Got suggestions? Email us at lemoneydph@gmail.com</p>
+            <p>&copy; 2023 Lemoneyd. All rights reserved.</p>
+        </div>
+    </footer>
     
 </body>
 </html>
