Add style to the nav bar. Add h2 tags on list items

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
         <nav>
             <h1><a href="#home">Lemoneyd</a></h1>
             <ul>
-                <li><a href="#savings">Savings</a></li>
-                <li><a href="#credit-cards">Credit Cards</a></li>
+                <li>
+                    <h3><a href="#savings">Savings</a></h3>
+                </li>
+                <li>
+                    <h3><a href="#credit-cards">Credit Cards</a></h3>
+                </li>
             </ul>
         </nav>        
     </header>
