--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lemoneyd</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -14,11 +19,11 @@
         <nav>
             <h1><a href="#home">Lemoneyd</a></h1>
             <ul>
-                <li>
-                    <h3><a href="#savings">Savings</a></h3>
+                <li class="list-item">
+                    <a href="#savings">Savings</a>
                 </li>
-                <li>
-                    <h3><a href="#credit-cards">Credit Cards</a></h3>
+                <li class="list-item">
+                    <a href="#credit-cards">Credit Cards</a>
                 </li>
             </ul>
         </nav>        
