--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
     </header>
 
     <main>
-
+        <section id="home">
+            <h2>Easily compare and discover<br>financial products</h2>
+            <p>No more checking of different websites.</p>
+            <p>Save time and find the best financial products for your needs.</p>
+        </section>
 
     </main>
 
