Add 'savings' section to index.html and apply styling
- Added 'savings' section to index.html for displaying information about high-interest savings accounts
- Applied CSS styles to the 'savings' section for improved visual appearance and text alignment

--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
             <p>Save time and find the best financial products for your needs.</p>
         </section>
 
+        <section id="savings">
+            <div id="savings-wordings">
+                <h2>Best High-Interest Digital Savings Accounts</h2>
+                <p>
+                    Let's make saving simple and convenient. These are 100% online savings accounts with high interest rates.<br>
+                    Best for building emergency fund.
+                </p>
+            </div>
+        </section>
+        
+
     </main>
 
     <footer>
