--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
                     <p>Interest (p.a.)</p>
                 </div>
 
-                <div class="banks-header">
+                <div class="bank-header">
+                    <p>Interest details</p>
+                </div>
+
+                <div class="bank-header">
                     <p>Key features</p>
                 </div>
 
@@ -73,6 +77,8 @@
                 <div class="banks-savings">DiskarTech Savings</div>
                 <div class="banks-interest">
                     <p class="interest">6.5%</p>
+                </div>
+                <div class="expand-button">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="expand-button">
@@ -88,9 +94,11 @@
                 <div class="banks-logo">
                     <img src="Ownbank-logo.png" alt="ownbank logo">
                 </div>
-                <div class="banks-savings">GSave (via GCash)</div>
+                <div class="banks-savings">Own It</div>
                 <div class="banks-interest">
                     <p class="interest">6%</p>
+                </div>
+                <div class="expand-button">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="expand-button">
@@ -109,6 +117,8 @@
                 <div class="banks-savings">GSave (via GCash)</div>
                 <div class="banks-interest">
                     <p class="interest">5% - 15%</p>
+                </div>
+                <div class="expand-button">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="expand-button">
@@ -127,6 +137,8 @@
                 <div class="banks-savings">UpSave (via CIMB)</div>
                 <div class="banks-interest">
                     <p class="interest">5% - 15%</p>
+                </div>
+                <div class="expand-button">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="expand-button">
@@ -139,13 +151,15 @@
 
 
 
-                    <!-- Row 4-->
+                    <!-- Row 5 -->
                 <div class="banks-logo">
                     <img src="gotyme-logo.png" alt="gotyme bank logo">
                 </div>
                 <div class="banks-savings">Go Save</div>
                 <div class="banks-interest">
                     <p class="interest">5%</p>
+                </div>
+                <div class="expand-button">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="expand-button">
@@ -157,13 +171,15 @@
                 </div>
 
 
-                    <!-- Row 5-->
+                    <!-- Row 6 -->
                 <div class="banks-logo">
                     <img src="seabank-logo.png" alt="seabank logo">
                 </div>
                 <div class="banks-savings">Seabank Savings</div>
                 <div class="banks-interest">
                     <p class="interest">4.5%</p>
+                </div>
+                <div class="expand-button">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="expand-button">
@@ -175,13 +191,15 @@
                 </div>
 
 
-                    <!-- Row 6-->
+                    <!-- Row 7 -->
                 <div class="banks-logo">
                     <img src="tonik-logo.png" alt="tonik bank logo">
                 </div>
                 <div class="banks-savings">Solo / Group Stash</div>
                 <div class="banks-interest">
                     <p class="interest">4% - 4.5%</p>
+                </div>
+                <div class="expand-button">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="expand-button">
@@ -193,13 +211,15 @@
                 </div>
 
 
-                    <!-- Row 7-->
+                    <!-- Row 8 -->
                 <div class="banks-logo">
                     <img src="netbank-logo.png" alt="netbank logo">
                 </div>
                 <div class="banks-savings">Netbank Mobile</div>
                 <div class="banks-interest">
                     <p class="interest">4%</p>
+                </div>
+                <div class="expand-button">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="expand-button">
@@ -211,13 +231,15 @@
                 </div>
 
 
-                    <!-- Row 8-->
+                    <!-- Row 9 -->
                 <div class="banks-logo">
                     <img src="maya-logo.png" alt="maya bank logo">
                 </div>
                 <div class="banks-savings">Maya Personal Goals</div>
                 <div class="banks-interest">
-                    <p class="interest">6.5%</p>
+                    <p class="interest">4%</p>
+                </div>
+                <div class="expand-button">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="expand-button">
@@ -230,13 +252,15 @@
                 </div>
 
 
-                    <!-- Row 9-->
+                    <!-- Row 10 -->
                 <div class="banks-logo">
                     <img src="maya-logo.png" alt="maya bank logo">
                 </div>
                 <div class="banks-savings">Maya Savings</div>
                 <div class="banks-interest">
-                    <p class="interest">6.5%</p>
+                    <p class="interest">3.5% - 14%</p>
+                </div>
+                <div class="expand-button">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="expand-button">
@@ -249,13 +273,15 @@
                 </div>
 
 
-                    <!-- Row 10-->
+                    <!-- Row 11 -->
                 <div class="banks-logo">
                     <img src="unogcash-logo.png" alt="unobank gcash logo">
                 </div>
                 <div class="banks-savings">#UNOready (via GCash)</div>
                 <div class="banks-interest">
-                    <p class="interest">6.5%</p>
+                    <p class="interest">3.5% - 4.25%</p>
+                </div>
+                <div class="expand-button">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="expand-button">
@@ -267,13 +293,15 @@
                 </div>
 
 
-                    <!-- Row 11-->
+                    <!-- Row 12 -->
                 <div class="banks-logo">
                     <img src="uno-logo.png" alt="unobank bank logo">
                 </div>
                 <div class="banks-savings">#UNOready (via UNO)</div>
                 <div class="banks-interest">
-                    <p class="interest">6.5%</p>
+                    <p class="interest">3.5% - 4.25%</p>
+                </div>
+                <div class="expand-button">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="expand-button">
@@ -285,13 +313,15 @@
                 </div>
 
 
-                    <!-- Row 12-->
+                    <!-- Row 13 -->
                 <div class="banks-logo">
                     <img src="uniondigital-logo.png" alt="union digital bank logo">
                 </div>
                 <div class="banks-savings">UnionDigital Bank</div>
                 <div class="banks-interest">
-                    <p class="interest">6.5%</p>
+                    <p class="interest">3% - 4%</p>
+                </div>
+                <div class="expand-button">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="expand-button">
@@ -303,13 +333,15 @@
                 </div>
 
                 
-                    <!-- Row 13-->
+                    <!-- Row 14 -->
                 <div class="banks-logo">
                     <img src="komo-logo.png" alt="komo bank logo">
                 </div>
                 <div class="banks-savings">Komo</div>
                 <div class="banks-interest">
-                    <p class="interest">6.5%</p>
+                    <p class="interest">2.5%</p>
+                </div>
+                <div class="expand-button">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="expand-button">
