Add details to interest-details and key-features of Rows 1, 2, 3

--- a/index.html
+++ b/index.html
@@ -81,14 +81,22 @@
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="interest-details">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
+                    <ul>
+                        <li>Earn 6.5% interest on savings up to P49,700.</li>
+                        <li>Excess of P49,700 will not earn interest.</li>
+                        <li>The maximum limit for the savings account is capped at P50,000.</li>
+                    </ul>
                 </div>
 
                 <div class="expand-button-2">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>      
                 <div class="key-features">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
+                    <ul>
+                        <li>Access Bills payment, Insurance products, Telemedicine services, and Loan offers.</li>
+                        <li>Free transfers from RCBC to DiskarTech and vice versa.</li>
+                        <li>Learn more <a href="https://diskartech.ph/faqs/" target="_blank">here.</a></li>
+                    </ul>
                 </div>
 
 
@@ -105,15 +113,22 @@
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="interest-details">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
+                    <ul>
+                        <li>Basic accounts earn 6% interest on savings up to P50,000.</li>
+                        <li>Upgraded accounts earn 6% interest on all deposited savings(no limit).</li>
+                    </ul>
                 </div>
 
                 <div class="expand-button-2">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>      
                 <div class="key-features">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
-                </div>             
+                    <ul>
+                        <li>Transfer to other OwnBank using mobile number.</li>
+                        <li>Mobile load, Game credits, and Data plans services.</li>
+                        <li>Learn more <a href="https://www.ownbank.com/help-center" target="_blank">here.</a></li>
+                    </ul>
+                </div>        
 
 
                     <!-- Row 3 -->  
@@ -129,15 +144,29 @@
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="interest-details">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
+                    <ul>
+                        <p class="details-header">Promo runs from Nov. 1 to Dec. 31, 2023:</p>
+                        <li>All accounts will earn 5% p.a interest on all savings balances(no limit) for the months of Nov. and Dec.</li>
+                        <li>Earn +1% p.a. interest by growing your Total ADB by at least Php 5,000.</li>
+                        <li>Earn +2% p.a. interest by using your Virtual Debit Card.</li>
+                        <li>Earn +3% p.a. interest by transacting using Virtual Debit Card, Bills payment or Buy Load.</li>
+                        <li>Earn +4% p.a. interest by growing your Total ADB by at least Php 50,000.</li>
+                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/promotions/promotions/5-year-anniversary-deposit-promo.html" target="_blank">here.</a></li>
+                    </ul>
                 </div>
 
-                <div class="expand-button-2">
+                <div class="expand-button-2">   
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>      
                 <div class="key-features">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
-                </div>              
+                    <ul>
+                        <li>Access your account through the GCash and CIMB app.</li>
+                        <li>Download a Bank Certificate.</li>
+                        <li>Physical and Virtual Debit Card available.</li>
+                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/digital-banking/our-products/gsave.html" target="_blank">here.</a></li>
+                    </ul>
+                </div>       
+          
                 
 
                     <!-- Row 4 -->
