Update the details of the bank-list on Rows 4-7

--- a/index.html
+++ b/index.html
@@ -161,8 +161,9 @@
                 <div class="key-features">
                     <ul>
                         <li>Access your account through the GCash and CIMB app.</li>
-                        <li>Download a Bank Certificate.</li>
-                        <li>Physical and Virtual Debit Card available.</li>
+                        <li>Request and download Bank Certificate.</li>
+                        <li>Physical and Virtual Debit Card available through the CIMB app.</li>
+                        <li>Account holders who maintain a minimum ADB of P5,000 for one month will be able to enjoy Free life insurance.</li>
                         <li>Learn more <a href="https://www.cimbbank.com.ph/en/digital-banking/our-products/gsave.html" target="_blank">here.</a></li>
                     </ul>
                 </div>       
@@ -182,15 +183,29 @@
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="interest-details">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
+                    <ul>
+                        <p class="details-header">Promo runs from Nov. 1 to Dec. 31, 2023:</p>
+                        <li>All accounts will earn 5% p.a interest on all savings balances(no limit) for the months of Nov. and Dec.</li>
+                        <li>Earn +1% p.a. interest by growing your Total ADB by at least Php 5,000.</li>
+                        <li>Earn +2% p.a. interest by using your Virtual Debit Card.</li>
+                        <li>Earn +3% p.a. interest by transacting using Virtual Debit Card, Bills payment or Buy Load.</li>
+                        <li>Earn +4% p.a. interest by growing your Total ADB by at least Php 50,000.</li>
+                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/promotions/promotions/5-year-anniversary-deposit-promo.html" target="_blank">here.</a></li>
+                    </ul>
                 </div>
 
-                <div class="expand-button-2">
+                <div class="expand-button-2">   
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>      
                 <div class="key-features">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
-                </div>
+                    <ul>
+                        <li>Access your account through the CIMB app.</li>
+                        <li>Request and download Bank Certificate.</li>
+                        <li>Physical and Virtual Debit Card available through the CIMB app.</li>
+                        <li>Account holders who maintain a minimum ADB of P5,000 for one month will be able to enjoy Free life insurance.</li>
+                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/digital-banking/our-products/upsave.html" target="_blank">here.</a></li>
+                    </ul>
+                </div>    
                 
 
 
@@ -207,15 +222,25 @@
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="interest-details">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
+                    <ul>
+                        <li>Create up to 5 separate Go Save accounts and earn 5% interest for each account(no limit).
+                        </li>
+                    </ul>
                 </div>
 
                 <div class="expand-button-2">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>      
                 <div class="key-features">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
-                </div>
+                    <ul>
+                        <li>Create up to 5 separate Go Save accounts, set customizable target amounts and timeframes for each.</li>
+                        <li>Schedule auto-saves or save your change when you shop.</li>
+                        <li>Transfers to other local banks are free up to 3 times per week.</li>
+                        <li>Get a free ATM debit card.</li>
+                        <li>Earn Go Rewards points that you can redeem as cash, which will be credited to your account.</li>
+                        <li>Learn more <a href="https://www.gotyme.com.ph/" target="_blank">here.</a></li>
+                    </ul>
+                </div> 
 
                 
 
@@ -232,15 +257,23 @@
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="interest-details">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
+                    <ul>
+                        <li>Earn 4.5% interest for savings up to P250,000. Excess of P250,000 will earn 3% interest.</li>
+                    </ul>
                 </div>
 
                 <div class="expand-button-2">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>      
                 <div class="key-features">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
-                </div>
+                    <ul>
+                        <li>Daily crediting of interest earnings.</li>
+                        <li>First fifteen (15) InstaPay and PESONet transfers to other banks or e-wallets per week are free.</li>
+                        <li>Request and download Bank Certificate.</li>
+                        <li>Transfer funds from ShopeePay to SeaBank anytime for free.</li>
+                        <li>Learn more <a href="https://www.seabank.ph/product/savings" target="_blank">here.</a></li>
+                    </ul>
+                </div> 
 
 
 
@@ -257,15 +290,24 @@
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="interest-details">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
+                    <ul>
+                        <li>Earn 4% interest for Solo stash and 4.5% interest for Group Stash(owner + 2 participants).</li>
+                        <li>Create up to 5 stashes (Solo and Group combined).</li>
+                    </ul>
                 </div>
 
                 <div class="expand-button-2">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>      
                 <div class="key-features">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
-                </div>
+                    <ul>
+                        <li>Group Stash allows you to invite family and friends to contribute to your savings goal.</li>
+                        <li>Physical and Virtual Debit Card available.</li>
+                        <li>Access to Quick, Big, and Shop Installment Loan products.</li>
+                        <li>Request a Bank Certificate.</li>
+                        <li>Learn more <a href="https://tonikbank.com/savings-cards/tonik-account" target="_blank">here.</a></li>
+                    </ul>
+                </div> 
 
 
 
