Update the details of the bank-list on Rows 8-10

--- a/index.html
+++ b/index.html
@@ -324,16 +324,21 @@
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="interest-details">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
+                    <ul>
+                        <li>Account opening starting September 1, 2023 onwards, will receive a 4% interest p.a.</li>
+                    </ul>
                 </div>
 
                 <div class="expand-button-2">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>      
                 <div class="key-features">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
-                </div>
-
+                    <ul>
+                        <li>Daily crediting of interest earnings.</li>
+                        <li>Free InstaPay and Pesonet transfers.</li>
+                        <li>Learn more <a href="https://www.netbank.ph/netbank-mobile" target="_blank">here.</a></li>
+                    </ul>
+                </div> 
 
 
                     <!-- Row 9 -->
@@ -349,15 +354,23 @@
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="interest-details">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
+                    <ul>
+                        <li>Create up to 5 goal accounts and earn 4% interest on each account for a duration of up to six (6) months.</li>
+                        <li>Interest rate applies to max Goal balance of P1 million. Any amount higher will not earn interest.</li>
+                    </ul>
                 </div>
 
                 <div class="expand-button-2">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>      
                 <div class="key-features">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
-                </div>
+                    <ul>
+                        <li>Access to all Maya app services and features.</li>
+                        <li>5x free InstaPay transfers per month.</li>
+                        <li>Physical and Virtual Debit Card available via the Maya app.</li>
+                        <li>Learn more <a href="https://www.mayabank.ph/savings/personal-goals/" target="_blank">here.</a></li>
+                    </ul>
+                </div> 
 
 
 
@@ -374,15 +387,30 @@
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="interest-details">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
+                    <ul>
+                        <li>Earn a base rate of 3.5% interest, which applies to savings up to P5,000,000. Excess of P5M will not earn interest.</li><br>
+                        <p class="details-header">Promo runs November 1, 2023 to January 31, 2024:</p>
+                        <li>Get up to 6% p.a. with a total spend of P1,000.</li>
+                        <li>Get up to 10% p.a. with a total spend of Php35,000.</li>
+                        <li>Get a bonus +1% p.a. when you refer a friend.</li>
+                        <li>Get an extra +1% p.a. if you're a Smart Postpaid subscriber.</li>
+                        <li>New users will have +8.5% interest p.a. with a total spend of Php500 on their first month on Maya Savings.</li>
+                        <li>All bonus interest rates only applies to max balance of up to Php100,000.</li>
+                        <li>Learn more <a href="https://www.maya.ph/deals/savings/boost-your-interest-up-to-14-pa-when-you-pay-with-maya-2023-november" target="_blank">here.</a></li>
+                    </ul>
                 </div>
 
                 <div class="expand-button-2">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>      
                 <div class="key-features">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
-                </div>
+                    <ul>
+                        <li>Access to all Maya app services and features.</li>
+                        <li>5x free InstaPay transfers per month.</li>
+                        <li>Physical and Virtual Debit Card available via the Maya app.</li>
+                        <li>Learn more <a href="https://www.mayabank.ph/" target="_blank">here.</a></li>
+                    </ul>
+                </div> 
 
 
 
@@ -486,7 +514,7 @@
 
             </div>
             <div class="update">
-                <i>Last updated: Nov. 3, 2023</i>
+                <i>Last updated: Nov. 5, 2023</i>
             </div>
         </section>
     
