Update all the details of the banks from Row 1 - 14

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
             <div id="savings-wordings">
                 <h3>Best High-Interest Digital Savings Accounts</h3>
                 <p>
-                    Let's make saving simple and convenient. These are 100% online savings accounts with high interest rates.<br>
-                    Best for building emergency fund.
+                    These are 100% online savings accounts with high interest rates. Best for building emergency fund.
                 </p>
             </div>
 
@@ -427,16 +426,25 @@
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="interest-details">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
+                    <ul>
+                        <li>Earn 3.50% interest for savings up to P4,999.99</li>
+                        <li>4.25% for savings of P5,000 or more up to P4,999,999.99</li>
+                        <li>1% for savings P5,000,000 and above.</li>
+                    </ul>
                 </div>
 
                 <div class="expand-button-2">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>      
                 <div class="key-features">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
-                </div>
-
+                    <ul>
+                        <li>Access your account through GCash and UNO Digital Bank app.</li>
+                        <li>Daily crediting of interest earnings.</li>
+                        <li>Free life insurance coverage worth PHP50,000 for a minimum monthly ADB of PHP10,000.</li>
+                        <li>Physical and Virtual Debit Card available via UNO Digital Bank app.</li>
+                        <li>Learn more <a href="https://uno.bank/savings-account/" target="_blank">here.</a></li>
+                    </ul>
+                </div> 
 
 
                     <!-- Row 12 -->
@@ -452,15 +460,25 @@
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="interest-details">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
+                    <ul>
+                        <li>Earn 3.50% interest for savings up to P4,999.99</li>
+                        <li>4.25% for savings of P5,000 or more up to P4,999,999.99</li>
+                        <li>1% for savings P5,000,000 and above.</li>
+                    </ul>
                 </div>
 
                 <div class="expand-button-2">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>      
                 <div class="key-features">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
-                </div>
+                    <ul>
+                        <li>Access your account through the UNO Digital Bank app.</li>
+                        <li>Daily crediting of interest earnings.</li>
+                        <li>Free life insurance coverage worth PHP50,000 for a minimum monthly ADB of PHP10,000.</li>
+                        <li>Physical and Virtual Debit Card available via UNO Digital Bank app.</li>
+                        <li>Learn more <a href="https://uno.bank/savings-account/" target="_blank">here.</a></li>
+                    </ul>
+                </div> 
 
 
 
@@ -477,15 +495,21 @@
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="interest-details">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
+                    <ul>
+                        <li>Earn 3% interest p.a. for savings below P5,000,000 and 4% interest for P5,000,000 and above.</li>
+                    </ul>
                 </div>
 
                 <div class="expand-button-2">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>      
                 <div class="key-features">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
-                </div>
+                    <ul>
+                        <li>Access to Bills payment.</li>
+                        <li>Learn more <a href="https://uniondigitalbank.io/en/product-rates-fees" target="_blank">here.</a></li>
+                    </ul>
+                </div> 
+
 
 
                 
@@ -497,24 +521,33 @@
                 <div class="banks-interest">
                     <p class="interest">2.5%</p>
                 </div>
+
                 <div class="expand-button">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>
                 <div class="interest-details">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
+                    <ul>
+                        <li>Earn 2.5% interest per annum on your savings.</li>
+                    </ul>
                 </div>
 
                 <div class="expand-button-2">
                     <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
                 </div>      
                 <div class="key-features">
-                    <p>Earn 6.5% interest per annum (p.a.) on savings up to P49,700. Excess of P49,700 will not earn interest. The maximum limit for the savings account is capped at P50,000.</p>
-                </div>
+                    <ul>
+                        <li>ATM/Debit card available.</li>
+                        <li>Generate Bank statement.</li>
+                        <li>Savings account Analytics.</li>
+                        <li>Access to Bills payment, Insurance, Loans, and Mobile load.</li>
+                        <li>Learn more <a href="https://www.komo.ph/" target="_blank">here.</a></li>
+                    </ul>
+                </div> 
 
 
             </div>
             <div class="update">
-                <i>Last updated: Nov. 5, 2023</i>
+                <i>All the information posted is up to date.</i>
             </div>
         </section>
     
@@ -523,7 +556,7 @@
     <footer>
         <div id="footer-content">
             <p>For the Filipino Finance Community 💛</p>
-            <p>Got suggestions? Email us at lemoneydph@gmail.com</p>
+            <p>Please like and follow our Facebook page, <a href="https://www.facebook.com/lemoneydph" target="_blank">Lemoneyd</a></p>
             <p>&copy; 2023 Lemoneyd. All rights reserved.</p>
         </div>
     </footer>
