Make it mobile responsive by using media query, done with max-with 480px

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>      
                 <div class="key-features">
                     <ul>
-                        <li>Access Bills payment, Insurance products, Telemedicine services, and Loan offers.</li>
+                        <li>Access Bills payment, Insurance, Telemedicine services, and Loan offers.</li>
                         <li>Free transfers from RCBC to DiskarTech and vice versa.</li>
                         <li>Learn more <a href="https://diskartech.ph/faqs/" target="_blank">here.</a></li>
                     </ul>
