Make it mobile responsive on all screen sizes

--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Earn 2.5% interest per annum on your savings.</li>
+                        <li>Earn 2.5% interest per annum on your savings(no limit).</li>
                     </ul>
                 </div>
 
@@ -555,8 +555,8 @@
 
     <footer>
         <div id="footer-content">
+            <p>Please like and follow our facebook page, <a href="https://www.facebook.com/lemoneydph" target="_blank" id="lemoneyd-link">Lemoneyd</a></p>
             <p>For the Filipino Finance Community 💛</p>
-            <p>Please like and follow our Facebook page, <a href="https://www.facebook.com/lemoneydph" target="_blank">Lemoneyd</a></p>
             <p>&copy; 2023 Lemoneyd. All rights reserved.</p>
         </div>
     </footer>
