Change the background color of banks-list to match the background color of #home

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
                     <!-- Row 2 -->  
                 <div class="banks-logo">
-                    <img src="Ownbank-logo.png" alt="ownbank logo">
+                    <img src="ownbank-logo.png" alt="ownbank logo">
                 </div>
                 <div class="banks-savings">Own It</div>
                 <div class="banks-interest">
