--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
                 <li class="list-item">
                     <a href="#savings">Savings</a>
                 </li>
-                <li class="list-item">
-                    <a href="#credit-cards">Credit Cards</a>
-                </li>
             </ul>
         </nav>        
     </header>
@@ -84,6 +81,7 @@
                         <li>Earn 6.5% interest on savings up to P49,700.</li>
                         <li>Excess of P49,700 will not earn interest.</li>
                         <li>The maximum limit for the savings account is capped at P50,000.</li>
+                        <li>Monthly crediting of interest earnings.</li>
                     </ul>
                 </div>
 
@@ -115,6 +113,7 @@
                     <ul>
                         <li>Basic accounts earn 6% interest on savings up to P50,000.</li>
                         <li>Upgraded accounts earn 6% interest on all deposited savings(no limit).</li>
+                        <li>Daily crediting of interest earnings.</li>
                     </ul>
                 </div>
 
@@ -258,6 +257,7 @@
                 <div class="interest-details">
                     <ul>
                         <li>Earn 4.5% interest for savings up to P250,000. Excess of P250,000 will earn 3% interest.</li>
+                        <li>Daily crediting of interest earnings.</li>
                     </ul>
                 </div>
 
@@ -266,7 +266,6 @@
                 </div>      
                 <div class="key-features">
                     <ul>
-                        <li>Daily crediting of interest earnings.</li>
                         <li>First fifteen (15) InstaPay and PESONet transfers to other banks or e-wallets per week are free.</li>
                         <li>Request and download Bank Certificate.</li>
                         <li>Transfer funds from ShopeePay to SeaBank anytime for free.</li>
@@ -419,7 +418,7 @@
                 </div>
                 <div class="banks-savings">#UNOready (via GCash)</div>
                 <div class="banks-interest">
-                    <p class="interest">3.5% - 4.25%</p>
+                    <p class="interest">3.5% - 6%</p>
                 </div>
 
                 <div class="expand-button">
@@ -429,8 +428,13 @@
                     <ul>
                         <li>Earn 3.50% interest for savings up to P4,999.99</li>
                         <li>4.25% for savings of P5,000 or more up to P4,999,999.99</li>
-                        <li>1% for savings P5,000,000 and above.</li>
+                        <li>1% for savings P5,000,000 and above.</li><br>
+                        <li>Daily crediting of interest earnings.</li>
+                        <p class="details-header">Promo for new users only (valid until Nov. 30, 2023):</p>
+                        <li>Earn 6% p.a. Account's ADB should be at least PHP 5,000.00</li>
+                        <li>Learn more <a href="https://uno.bank/promos-and-offers/" target="_blank">here.</a></li>
                     </ul>
+
                 </div>
 
                 <div class="expand-button-2">
@@ -439,7 +443,6 @@
                 <div class="key-features">
                     <ul>
                         <li>Access your account through GCash and UNO Digital Bank app.</li>
-                        <li>Daily crediting of interest earnings.</li>
                         <li>Free life insurance coverage worth PHP50,000 for a minimum monthly ADB of PHP10,000.</li>
                         <li>Physical and Virtual Debit Card available via UNO Digital Bank app.</li>
                         <li>Learn more <a href="https://uno.bank/savings-account/" target="_blank">here.</a></li>
@@ -453,7 +456,7 @@
                 </div>
                 <div class="banks-savings">#UNOready (via UNO)</div>
                 <div class="banks-interest">
-                    <p class="interest">3.5% - 4.25%</p>
+                    <p class="interest">3.5% - 6%</p>
                 </div>
 
                 <div class="expand-button">
@@ -463,7 +466,11 @@
                     <ul>
                         <li>Earn 3.50% interest for savings up to P4,999.99</li>
                         <li>4.25% for savings of P5,000 or more up to P4,999,999.99</li>
-                        <li>1% for savings P5,000,000 and above.</li>
+                        <li>1% for savings P5,000,000 and above.</li><br>
+                        <li>Daily crediting of interest earnings.</li>
+                        <p class="details-header">Promo for new users only (valid until Nov. 30, 2023):</p>
+                        <li>Earn 6% p.a. Account's ADB should be at least PHP 5,000.00</li>
+                        <li>Learn more <a href="https://uno.bank/promos-and-offers/" target="_blank">here.</a></li>
                     </ul>
                 </div>
 
@@ -473,7 +480,6 @@
                 <div class="key-features">
                     <ul>
                         <li>Access your account through the UNO Digital Bank app.</li>
-                        <li>Daily crediting of interest earnings.</li>
                         <li>Free life insurance coverage worth PHP50,000 for a minimum monthly ADB of PHP10,000.</li>
                         <li>Physical and Virtual Debit Card available via UNO Digital Bank app.</li>
                         <li>Learn more <a href="https://uno.bank/savings-account/" target="_blank">here.</a></li>
