--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
                     <!-- Row 2 -->  
                 <div class="banks-logo">
-                    <img src="ownbank-logo.png" alt="ownbank logo">
+                    <img src="ownbank.png" alt="ownbank logo">
                 </div>
                 <div class="banks-savings">Own It</div>
                 <div class="banks-interest">
