remove margig-bottom on home div of 380px and 381, 480px media query , also fix the interest-details

--- a/index.html
+++ b/index.html
@@ -464,8 +464,8 @@
                     <ul>
                         <li>Earn 3.50% interest for savings up to P4,999.99</li>
                         <li>4.25% for savings of P5,000 or more up to P4,999,999.99</li>
-                        <li>1% for savings P5,000,000 and above.</li><br>
-                        <li>Daily crediting of interest earnings.</li>
+                        <li>1% for savings P5,000,000 and above.</li>
+                        <li>Daily crediting of interest earnings.</li><br>
                         <p class="details-header">Promo for new users only (valid until Nov. 30, 2023):</p>
                         <li>Earn 6% p.a. Account's ADB should be at least PHP 5,000.00</li>
                         <li>Learn more <a href="https://uno.bank/promos-and-offers/" target="_blank">here.</a></li>
@@ -502,8 +502,8 @@
                     <ul>
                         <li>Earn 3.50% interest for savings up to P4,999.99</li>
                         <li>4.25% for savings of P5,000 or more up to P4,999,999.99</li>
-                        <li>1% for savings P5,000,000 and above.</li><br>
-                        <li>Daily crediting of interest earnings.</li>
+                        <li>1% for savings P5,000,000 and above.</li>
+                        <li>Daily crediting of interest earnings.</li><br>
                         <p class="details-header">Promo for new users only (valid until Nov. 30, 2023):</p>
                         <li>Earn 6% p.a. Account's ADB should be at least PHP 5,000.00</li>
                         <li>Learn more <a href="https://uno.bank/promos-and-offers/" target="_blank">here.</a></li>
