Fix the Seabank interest details

--- a/index.html
+++ b/index.html
@@ -292,7 +292,8 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <li>Earn 4.5% interest for savings up to P250,000. Excess of P250,000 will earn 3% interest.</li>
+                        <li>Earn 4.5% interest for savings up to P250,000.</li>
+                        <li>Excess of P250,000 will earn 3% interest.</li>
                         <li>Daily crediting of interest earnings.</li>
                     </ul>
                 </div>
